<resources>
    <string name="app_name">TuneAlly</string>
    <string name="main_bottom_banner_id">ca-app-pub-1824499265963306/1019546872</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <color name="yellow">#DEE054</color>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="bps">bps</string>
    <string name="timesignature">time signature</string>
    <string name="dash">/</string>
    <string name="volume">volume</string>
    <color name="black">#000000</color>
    <string name="one">1</string>
    <string name="title_activity_hearing__main_menu">Hearing_MainMenuActivity</string>
    <string name="howToString">
        \n
        1 - Sing to tone:\n
            Choose the scale and try to sing at exact the same tone as randomly picked note. After 5 seconds your performance will be shown.\n
        2 - Tones:\n
            In this module you can freely practice singing and recognizing tones without being judged. Simply touch the desired tone and sing.\n
        3 - Guessing:\n
            Choose two scales and try to guess which random tones were played.\n</string>

</resources>
