<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bps"
            android:layout_width="0px"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/timesignature"
            android:layout_width="0px"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/minus"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="onMinusClick"
            android:text="@string/minus"
            android:textColor="@color/very_dark_primary"
            android:textSize="30sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_light"
            android:onClick="onPlusClick"
            android:text="@string/plus"
            android:textColor="@color/very_dark_primary"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/beatspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/notespinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/startstop"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="onStartStopClick"
        android:text="@string/start"
        android:textColor="@color/very_dark_primary"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/currentBeat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.00"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/yellow"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/volume"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/volumebar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp" />

    </LinearLayout>

</LinearLayout>